--- a/my-background.html
+++ b/my-background.html
@@ -9,10 +9,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/about-me.html">About Me</a></li>
-                <li><a href="/contact-me.html">Contact Me</a></li>
-                <li><a href="/my-background.html">My CV</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about-me.html">About Me</a></li>
+                <li><a href="contact-me.html">Contact Me</a></li>
+                <li><a href="my-background.html">My CV</a></li>
                 <hr>                
             </ul>
         </nav>
